[gd_scene load_steps=36 format=3 uid="uid://di3nwwsf4b3pg"]

[ext_resource type="Script" uid="uid://dqjaw5bs00hd6" path="res://Scripts/player.gd" id="1_kyqiw"]
[ext_resource type="AudioStream" uid="uid://bdo5754167ehq" path="res://Assets/Sound/Player/cartoon_sneaking.mp3" id="2_glx4g"]
[ext_resource type="AudioStream" uid="uid://ososawicy82d" path="res://Assets/Sound/Player/cartoon_walking.mp3" id="3_miouo"]
[ext_resource type="AudioStream" uid="uid://cfs53s38q1rrf" path="res://Assets/Sound/Player/player_run_boot.mp3" id="4_megsn"]
[ext_resource type="Texture2D" uid="uid://csn6d058hdt35" path="res://Assets/Sprites/objects.png" id="5_yoq75"]
[ext_resource type="Texture2D" uid="uid://jm1gmwbxghix" path="res://Assets/Sprites/Animations/reload_indicator.png" id="6_glx4g"]
[ext_resource type="FontFile" uid="uid://c2nvekmrvmbwg" path="res://Assets/Fonts/Daydream DEMO.otf" id="6_yoq75"]
[ext_resource type="Texture2D" uid="uid://ddvd0604igekf" path="res://Assets/Sprites/Animations/press_ctrl.png" id="7_miouo"]
[ext_resource type="Script" uid="uid://d2tl2mlg2c5d" path="res://Scripts/States/Utility/state_machine.gd" id="8_megsn"]
[ext_resource type="Script" uid="uid://cnljpitby5fgm" path="res://Scripts/armed.gd" id="9_yoq75"]
[ext_resource type="Script" uid="uid://cqitagi37qlyh" path="res://Scripts/unarmed.gd" id="10_yoq75"]
[ext_resource type="Script" uid="uid://bg163ve1kg6hd" path="res://Scripts/press_crouch_timer.gd" id="14_o3h8g"]

[sub_resource type="CircleShape2D" id="CircleShape2D_kyqiw"]
radius = 7.0

[sub_resource type="Gradient" id="Gradient_ebmjs"]
interpolation_mode = 2
offsets = PackedFloat32Array(0, 0.52841145, 1)
colors = PackedColorArray(1, 1, 1, 1, 0.3910073, 0.3910073, 0.3910073, 1, 0, 0, 0, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_kyqiw"]
gradient = SubResource("Gradient_ebmjs")
fill = 2
fill_from = Vector2(1, 0)
fill_to = Vector2(0, 1)
metadata/_snap_count = 2
metadata/_snap_enabled = true

[sub_resource type="Gradient" id="Gradient_5ixxa"]
colors = PackedColorArray(1, 1, 1, 1, 0, 0, 0, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_gntrk"]
gradient = SubResource("Gradient_5ixxa")
fill = 1
fill_from = Vector2(0.5, 0.5)
fill_to = Vector2(1, 0.5)
metadata/_snap_enabled = true
metadata/_snap_count = 2

[sub_resource type="AtlasTexture" id="AtlasTexture_mucmn"]
atlas = ExtResource("6_glx4g")
region = Rect2(0, 0, 9, 9)

[sub_resource type="AtlasTexture" id="AtlasTexture_8m3t6"]
atlas = ExtResource("6_glx4g")
region = Rect2(9, 0, 9, 9)

[sub_resource type="AtlasTexture" id="AtlasTexture_ese38"]
atlas = ExtResource("6_glx4g")
region = Rect2(18, 0, 9, 9)

[sub_resource type="AtlasTexture" id="AtlasTexture_oeip8"]
atlas = ExtResource("6_glx4g")
region = Rect2(27, 0, 9, 9)

[sub_resource type="AtlasTexture" id="AtlasTexture_xe308"]
atlas = ExtResource("6_glx4g")
region = Rect2(36, 0, 9, 9)

[sub_resource type="AtlasTexture" id="AtlasTexture_d3cha"]
atlas = ExtResource("6_glx4g")
region = Rect2(45, 0, 9, 9)

[sub_resource type="AtlasTexture" id="AtlasTexture_i26dy"]
atlas = ExtResource("6_glx4g")
region = Rect2(54, 0, 9, 9)

[sub_resource type="AtlasTexture" id="AtlasTexture_lmoi6"]
atlas = ExtResource("6_glx4g")
region = Rect2(63, 0, 9, 9)

[sub_resource type="SpriteFrames" id="SpriteFrames_o3h8g"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_mucmn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8m3t6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ese38")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_oeip8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xe308")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_d3cha")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_i26dy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lmoi6")
}],
"loop": false,
"name": &"default",
"speed": 7.0
}]

[sub_resource type="AtlasTexture" id="AtlasTexture_6uxt2"]
atlas = ExtResource("7_miouo")
region = Rect2(0, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_ym3tv"]
atlas = ExtResource("7_miouo")
region = Rect2(16, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_bwj6o"]
atlas = ExtResource("7_miouo")
region = Rect2(32, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_f3c8l"]
atlas = ExtResource("7_miouo")
region = Rect2(48, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_bu0y5"]
atlas = ExtResource("7_miouo")
region = Rect2(64, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_6a4tp"]
atlas = ExtResource("7_miouo")
region = Rect2(80, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_631el"]
atlas = ExtResource("7_miouo")
region = Rect2(96, 0, 16, 16)

[sub_resource type="SpriteFrames" id="SpriteFrames_1e7my"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_6uxt2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ym3tv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bwj6o")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_f3c8l")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bu0y5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6a4tp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_631el")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="LabelSettings" id="LabelSettings_nn08x"]
font = ExtResource("6_yoq75")
font_size = 32
outline_size = 16
outline_color = Color(0, 0, 0, 1)

[node name="Player" type="CharacterBody2D" groups=["Player"]]
motion_mode = 1
wall_min_slide_angle = 0.0
script = ExtResource("1_kyqiw")
sneak_sound = ExtResource("2_glx4g")
walk_sound = ExtResource("3_miouo")
run_sound = ExtResource("4_megsn")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
z_index = 20
shape = SubResource("CircleShape2D_kyqiw")

[node name="ArmedSprite" type="Sprite2D" parent="."]
visible = false
position = Vector2(7, -2.3841858e-07)
texture = ExtResource("5_yoq75")
region_enabled = true
region_rect = Rect2(128.93172, 64.97185, 28.241669, 30.15802)

[node name="UnarmedSprite" type="Sprite2D" parent="."]
position = Vector2(3, 0)
texture = ExtResource("5_yoq75")
region_enabled = true
region_rect = Rect2(128.91437, 32.957653, 20.248856, 30.131466)

[node name="FlashLight" type="PointLight2D" parent="."]
unique_name_in_owner = true
position = Vector2(4.3524437, 4.900218)
rotation = 3.926991
scale = Vector2(1.4742185, 1.3914502)
shadow_enabled = true
texture = SubResource("GradientTexture2D_kyqiw")
offset = Vector2(-39.056076, 31.242708)

[node name="GunLight" type="PointLight2D" parent="."]
unique_name_in_owner = true
position = Vector2(6.3633995, 0.046188015)
rotation = 3.926991
scale = Vector2(1.3790007, 1.3702905)
shadow_enabled = true
texture = SubResource("GradientTexture2D_kyqiw")
offset = Vector2(-39.462822, 39.557117)

[node name="PointLight" type="PointLight2D" parent="."]
position = Vector2(0, -2.1316282e-14)
rotation = 1.5707964
scale = Vector2(0.5654729, 0.56547296)
texture = SubResource("GradientTexture2D_gntrk")

[node name="FootstepAudio" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("3_miouo")
volume_db = -5.958
bus = &"Ingame SFX"

[node name="StateMachine" type="Node" parent="." node_paths=PackedStringArray("initial_state")]
script = ExtResource("8_megsn")
initial_state = NodePath("Unarmed")
metadata/_custom_type_script = "uid://d2tl2mlg2c5d"

[node name="Armed" type="Node" parent="StateMachine"]
script = ExtResource("9_yoq75")

[node name="Unarmed" type="Node" parent="StateMachine"]
script = ExtResource("10_yoq75")

[node name="PressCrouchTimer" type="Timer" parent="."]
wait_time = 3.0
one_shot = true
script = ExtResource("14_o3h8g")

[node name="CanvasLayer" type="CanvasLayer" parent="."]
layer = 811

[node name="ReloadAnimation" type="AnimatedSprite2D" parent="CanvasLayer"]
visible = false
position = Vector2(783, 467)
rotation = 3.1415925
scale = Vector2(8, 8)
sprite_frames = SubResource("SpriteFrames_o3h8g")
offset = Vector2(-4.4960938, -4.5039063)

[node name="PressCrouchAnimation" type="AnimatedSprite2D" parent="CanvasLayer"]
visible = false
light_mask = 0
visibility_layer = 2
z_index = 2480
position = Vector2(905, 370)
scale = Vector2(4, 4)
sprite_frames = SubResource("SpriteFrames_1e7my")
offset = Vector2(8, 8)

[node name="InteractionPrompt" type="Label" parent="CanvasLayer"]
visible = false
z_index = 25
offset_left = 974.0
offset_top = 491.0
offset_right = 1007.0
offset_bottom = 543.0
pivot_offset = Vector2(4, 9)
text = "e"
label_settings = SubResource("LabelSettings_nn08x")

[connection signal="timeout" from="PressCrouchTimer" to="PressCrouchTimer" method="_on_timeout"]
